tests/jtrrouter/errors/sinks/false_edge2__multiple_sinks_in_defs/errors.jtrrouter
Error: The edge 'xxx' declared as a sink is not known.
Quitting (on error).
